@@ -2,9 +2,13 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+Sep 22 2017 (bgol, horizon branch):
+. Updated EDAPI plugin to version 4.3.0
+  - Added "/market" and "/shipyard" check from cAPI.
+
 Jul 03 2017 (bgol, horizon branch):
 . Updated EDAPI plugin to version 4.2.0
-  - Added "login option.
+  - Added "login" option.
   - EDDN Server Migration
 
 May 31 2017 (bgol, horizon branch):
